--- a/sourse/pug/blocks/sSpecifications/_sSpecifications.pug
+++ b/sourse/pug/blocks/sSpecifications/_sSpecifications.pug
@@ -76,7 +76,7 @@ mixin sSpecifications(btn, title, subtitle, btnText)
 							tr
 								td Изготовление • Установка
 								td 7 дней • 1 день
-					a.link-modal-js(href="#modal-call" data-title= "Запросить расчет похожего навеса" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет" data-btn= "Запросить расчет" data-pic= "2").btn.btn-primary!= btnText
+					a.link-modal-js(href="#modal-call" data-title= "Заказать расчет похожего навеса" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет" data-btn= "Заказать расчет" data-pic= "2").btn.btn-primary!= btnText
 					if btn
 						button.btn.btn-outline-secondary Сохранить себе
 	// end sSpecifications
@@ -158,7 +158,7 @@ mixin sSpecifications2(btn, title, subtitle, btnText)
 							tr
 								td Изготовление • Установка
 								td 7 дней • 1 день
-					a.link-modal-js(href="#modal-call" data-title= "Запросить расчет похожего навеса" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет" data-btn= "Запросить расчет" data-pic= "2").btn.btn-primary!= btnText
+					a.link-modal-js(href="#modal-call" data-title= "Заказать расчет похожего навеса" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет" data-btn= "Заказать расчет" data-pic= "2").btn.btn-primary!= btnText
 					if btn
 						button.btn.btn-outline-secondary Сохранить себе
 	// end sSpecifications
@@ -240,7 +240,7 @@ mixin sSpecifications3(btn, title, subtitle, btnText)
 							tr
 								td Изготовление • Установка
 								td 7 дней • 1 день
-					a.link-modal-js(href="#modal-call" data-title= "Запросить расчет похожего навеса" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет" data-btn= "Запросить расчет" data-pic= "2").btn.btn-primary!= btnText
+					a.link-modal-js(href="#modal-call" data-title= "Заказать расчет похожего навеса" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет" data-btn= "Заказать расчет" data-pic= "2").btn.btn-primary!= btnText
 					if btn
 						button.btn.btn-outline-secondary Сохранить себе
 	// end sSpecifications
