--- a/sourse/pug/blocks/sCalculator/_sCalculator.pug
+++ b/sourse/pug/blocks/sCalculator/_sCalculator.pug
@@ -81,7 +81,7 @@ mixin sCalculator(data)
 						.col-sm-6
 							+input('Ваш номер телефона', 'tel')
 						.col-12
-							+e.btn.link-modal-js(href="#modal-call" data-title= "Запросить детальный расчет" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет." data-btn= "Запросить расчет" data-pic= "1") Получить точный расчет <br> за&nbsp;15&nbsp;минут
+							+e.btn.link-modal-js(href="#modal-call" data-title= "Заказать детальный расчет" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет." data-btn= "Заказать расчет" data-pic= "1") Получить точный расчет <br> за&nbsp;15&nbsp;минут
 						.col-12
 							+e.footer 
 								.row
