--- a/sourse/pug/blocks/sCatalog/_sCatalog.pug
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.pug
@@ -36,7 +36,7 @@ mixin sCatalogProd(data)
 						+e.slide.swiper-slide
 							+catalogItem(1, `Бетонные площадки`, `от 59 150 ₽`)
 						+e.slide.swiper-slide
-							+catalogItem(1, `Укладка тротуарной <br> плитки`, `от 59 150 ₽`)
+							+catalogItem(1, `Мощение`, `от 59 150 ₽`)
 						+e.slide.swiper-slide
 							+catalogItem(1, `Ворота откатные <br> и&nbsp;распашные`, `от 59 150 ₽`)
 						+e.slide.swiper-slide
