--- a/sourse/pug/pages/03-portfolio-2.pug
+++ b/sourse/pug/pages/03-portfolio-2.pug
@@ -37,7 +37,7 @@ block pagecontent
 		title,
 		btn: 'btn'
 	})
-	+sSpecifications('btn')
+	+sSpecifications('btn', '', '', 'Хочу примерно такой же')
 	+sSimilarAwnings()
 	//- +headerBlock()
 	//- +sCatalog()
