--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -7,6 +7,34 @@ mixin sContact()
 				h2 Позвоните или посетите наш офис на&nbsp;производстве
 			+e.row.row
 				+e.col-map.col-lg-7.col-xxl-8
+					+e.info
+						+b.locaton-dropdown.dropdown
+								+e.btn.dropdown__btn
+									+icon('geo-tag')
+									span Москва и&nbsp;МО
+									+icon('chevron-down')
+								+e.content.dropdown__content
+									+e.item(href="#") Москва и&nbsp;МО
+									+e.item(href="#") Санкт-Петербург и&nbsp;область
+									+e.item(href="#") И так далее
+						+b.schedule
+							span открыто
+							span Пн&ndash;Вс &bull; 9:00&ndash;21:00
+					+e.wrap
+						h5 Телефоны
+						+e.content
+							+e.phone-number
+								a(href="tel:+74952563067") +7 495 256 30 67 
+								br
+								a(href="tel:+74952563067") +7 495 256 30 67 
+							+e.flex
+								+e.links(href="#")
+									+icon('whatsapp')
+									span Whatsapp
+								+e.links(href="#")
+									+icon('instagram-map')
+								+e.links--yt(href="#")
+									+icon('youtube')
 					+e.map
 						#map
 						//- <div id="map"style="width:100%; height:360px"></div>
@@ -41,32 +69,35 @@ mixin sContact()
 							//- 		// Добавляем все метки на карту.
 							//- 	};
 				+e.col-info.col-lg-5.col-xxl-4
-					+e.info
-						+b.locaton-dropdown.dropdown
-								+e.btn.dropdown__btn
-									+icon('geo-tag')
-									span Москва и&nbsp;МО
-									+icon('chevron-down')
-								+e.content.dropdown__content
-									+e.item(href="#") Москва и&nbsp;МО
-									+e.item(href="#") Санкт-Петербург и&nbsp;область
-									+e.item(href="#") И так далее
-						+b.schedule
-							span открыто
-							span Пн&ndash;Вс &bull; 9:00&ndash;21:00
+					+e.info.d-none.d-sm-block
+						
+							+b.locaton-dropdown.dropdown
+									+e.btn.dropdown__btn
+										+icon('geo-tag')
+										span Москва и&nbsp;МО
+										+icon('chevron-down')
+									+e.content.dropdown__content
+										+e.item(href="#") Москва и&nbsp;МО
+										+e.item(href="#") Санкт-Петербург и&nbsp;область
+										+e.item(href="#") И так далее
+							+b.schedule
+								span открыто
+								span Пн&ndash;Вс &bull; 9:00&ndash;21:00
 					+e.wrap
-						h5 Телефоны
+						.d-none.d-sm-block
+							h5 Телефоны
 						+e.content
-							+e.phone-number
-								a(href="tel:+74952563067") +7 495 256 30 67 
-								a(href="tel:+74952563067") +7 495 256 30 67 
-							+e.links(href="#")
-								+icon('whatsapp')
-								span Whatsapp
-							+e.links(href="#")
-								+icon('instagram-map')
-							+e.links--yt(href="#")
-								+icon('youtube')
+							.d-none.d-sm-block
+								+e.phone-number
+									a(href="tel:+74952563067") +7 495 256 30 67 
+									a(href="tel:+74952563067") +7 495 256 30 67 
+								+e.links(href="#")
+									+icon('whatsapp')
+									span Whatsapp
+								+e.links(href="#")
+									+icon('instagram-map')
+								+e.links--yt(href="#")
+									+icon('youtube')
 							+e.btn.btn.btn-primary.btn-sm.link-modal-js(href="#modal-call" data-title= "Обратный звонок" data-text= "Оставьте свой номер телефона, и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут." data-btn= "Заказать обратный звонок" data-pic= "2")
 								| Обратный звонок
 					+e.wrap
