--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -7,34 +7,39 @@ mixin sContact()
 				h2 Позвоните или посетите наш офис на&nbsp;производстве
 			+e.row.row
 				+e.col-map.col-lg-7.col-xxl-8
-					+e.info
-						+b.locaton-dropdown.dropdown
-								+e.btn.dropdown__btn
-									+icon('geo-tag')
-									span Москва и&nbsp;МО
-									+icon('chevron-down')
-								+e.content.dropdown__content
-									+e.item(href="#") Москва и&nbsp;МО
-									+e.item(href="#") Санкт-Петербург и&nbsp;область
-									+e.item(href="#") И так далее
-						+b.schedule
-							span открыто
-							span Пн&ndash;Вс &bull; 9:00&ndash;21:00
-					+e.wrap
-						h5 Телефоны
-						+e.content
-							+e.phone-number
-								a(href="tel:+74952563067") +7 495 256 30 67 
-								br
-								a(href="tel:+74952563067") +7 495 256 30 67 
-							+e.flex
-								+e.links(href="#")
-									+icon('whatsapp')
-									span Whatsapp
-								+e.links(href="#")
-									+icon('instagram-map')
-								+e.links--yt(href="#")
-									+icon('youtube')
+					.d-lg-none
+						+e.info
+							+b.locaton-dropdown.dropdown
+									+e.btn.dropdown__btn
+										+icon('geo-tag')
+										span Москва и&nbsp;МО
+										+icon('chevron-down')
+									+e.content.dropdown__content
+										+e.item(href="#") Москва и&nbsp;МО
+										+e.item(href="#") Санкт-Петербург и&nbsp;область
+										+e.item(href="#") И так далее
+							+b.schedule
+								span открыто
+								span Пн&ndash;Вс &bull; 9:00&ndash;21:00
+						+e.wrap
+							h5 Телефоны
+							+e.content
+								+e.phone-number
+									a(href="tel:+74952563067") +7 495 256 30 67 
+									br
+									a(href="tel:+74952563067") +7 495 256 30 67 
+								+e.flex
+									+e.links(href="#")
+										+icon('whatsapp')
+										span Whatsapp
+									+e.links(href="#")
+										+icon('instagram-map')
+									+e.links--yt(href="#")
+										+icon('youtube')
+								+e.btn.btn.btn-primary.btn-sm.link-modal-js(href="#modal-call" data-title= "Обратный звонок" data-text= "Оставьте свой номер телефона, и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут." data-btn= "Заказать обратный звонок" data-pic= "2") Обратный звонок
+						+e.wrap.d-lg-none.mb-5
+							h5 Email
+							a(href="mailto:info@naves-na-zakaz.ru") info@naves-na-zakaz.ru
 					+e.map
 						#map
 						//- <div id="map"style="width:100%; height:360px"></div>
@@ -69,7 +74,7 @@ mixin sContact()
 							//- 		// Добавляем все метки на карту.
 							//- 	};
 				+e.col-info.col-lg-5.col-xxl-4
-					+e.info.d-none.d-sm-block
+					+e.info.d-none.d-lg-flex
 						
 							+b.locaton-dropdown.dropdown
 									+e.btn.dropdown__btn
@@ -83,24 +88,23 @@ mixin sContact()
 							+b.schedule
 								span открыто
 								span Пн&ndash;Вс &bull; 9:00&ndash;21:00
-					+e.wrap
-						.d-none.d-sm-block
-							h5 Телефоны
-						+e.content
-							.d-none.d-sm-block
-								+e.phone-number
-									a(href="tel:+74952563067") +7 495 256 30 67 
-									a(href="tel:+74952563067") +7 495 256 30 67 
-								+e.links(href="#")
-									+icon('whatsapp')
-									span Whatsapp
-								+e.links(href="#")
-									+icon('instagram-map')
-								+e.links--yt(href="#")
-									+icon('youtube')
-							+e.btn.btn.btn-primary.btn-sm.link-modal-js(href="#modal-call" data-title= "Обратный звонок" data-text= "Оставьте свой номер телефона, и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут." data-btn= "Заказать обратный звонок" data-pic= "2")
-								| Обратный звонок
-					+e.wrap
+					+e.wrap.d-none.d-lg-block
+						
+						h5 Телефоны
+						+e.content 
+							+e.phone-number
+								a(href="tel:+74952563067") +7 495 256 30 67 
+								a(href="tel:+74952563067") +7 495 256 30 67 
+							+e.links(href="#")
+								+icon('whatsapp')
+								span Whatsapp
+							+e.links(href="#")
+								+icon('instagram-map')
+							+e.links--yt(href="#")
+								+icon('youtube')
+						+e.btn.btn.btn-primary.btn-sm.link-modal-js(href="#modal-call" data-title= "Обратный звонок" data-text= "Оставьте свой номер телефона, и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут." data-btn= "Заказать обратный звонок" data-pic= "2")  Обратный звонок
+
+					+e.wrap.d-none.d-lg-block.mb-4
 						h5 Email
 						a(href="mailto:info@naves-na-zakaz.ru") info@naves-na-zakaz.ru
 					+e.wrap
