--- a/sourse/pug/blocks/sContact/_sContact.scss
+++ b/sourse/pug/blocks/sContact/_sContact.scss
@@ -72,7 +72,7 @@
 			left: -50%;
 			z-index: -7;
 		}
-		@include media-breakpoint-down(sm) {
+		@include media-breakpoint-down(lg) {
 			margin-bottom: 40px;
 		}
 	}
