--- a/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
+++ b/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
@@ -9,9 +9,9 @@ mixin sPortfolio(data)
 				.col-12
 					+sSpecifications('', 'Навес из поликарбоната', 'Гарабиты: 6х6 м • Высота по столбам: 2,4 м', 'Заказать расчет похожего навеса')
 				.col-12
-					+sSpecifications2('', 'Навес из поликарбоната', 'Гарабиты: 6х6 м • Высота по столбам: 2,4 м', 'Заказать расчет похожего навеса')
+					+sSpecifications('', 'Навес из поликарбоната', 'Гарабиты: 6х6 м • Высота по столбам: 2,4 м', 'Заказать расчет похожего навеса')
 				.col-12
-					+sSpecifications3('', 'Навес из поликарбоната', 'Гарабиты: 6х6 м • Высота по столбам: 2,4 м', 'Заказать расчет похожего навеса')
+					+sSpecifications('', 'Навес из поликарбоната', 'Гарабиты: 6х6 м • Высота по столбам: 2,4 м', 'Заказать расчет похожего навеса')
 				.col
 					+e.btn-wrap
 						button.btn.btn-primary Показать еще
