--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -88,7 +88,7 @@
 	&__content {
 		// position: absolute;
 		@include media-breakpoint-up(lg) {
-			margin-top: rem(-113);
+			// margin-top: rem(-113);
 		}
 		span {
 			font-size: rem(12);
