--- a/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
+++ b/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
@@ -15,5 +15,5 @@ mixin sPortfolio(data)
 				.col
 					+e.btn-wrap
 						button.btn.btn-primary Показать еще
-						button.btn.btn-outline-secondary Смотреть всё портфолио
+						a.btn.btn-outline-secondary(href="#") Смотреть всё портфолио
 	// end sPortfolio
