--- a/sourse/pug/blocks/sPortfolio/_sPortfolio.scss
+++ b/sourse/pug/blocks/sPortfolio/_sPortfolio.scss
@@ -49,6 +49,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		a,
 		button {
 			&:first-child {
 				margin-bottom: rem(20);
