--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -114,6 +114,8 @@ $output-bourbon-deprecation-warnings: false;
 
 	.current {
 		z-index: 1;
+		background-color: $primary;
+		border-color: $primary;
 		// color: $pagination-active-color;
 		// background-color: $pagination-active-bg;
 		// border-color: $pagination-active-border-color;
