--- a/sourse/pug/blocks/sSpecifications/_sSpecifications.pug
+++ b/sourse/pug/blocks/sSpecifications/_sSpecifications.pug
@@ -14,8 +14,8 @@ mixin sSpecifications(btn, title, subtitle, btnText)
 											+pic(`sSpecifications-md-${i}.jpg`, `bg`, 0)
 								+slide2(1)
 								+slide2(2)
-								+slide2(3)
-								+slide2(4)
+								//- +slide2(3)
+								//- +slide2(4)
 						+e.slider-thumbs--js.swiper
 							.swiper-wrapper
 								mixin slide(i)
@@ -25,8 +25,8 @@ mixin sSpecifications(btn, title, subtitle, btnText)
 											//- img(src=`img/@2x/sProject-sm-${i}.jpg` alt='')
 								+slide(1)
 								+slide(2)
-								+slide(3)
-								+slide(4)
+								//- +slide(3)
+								//- +slide(4)
 				.col-lg-4
 					if title 
 						h4!= title
