--- a/sourse/pug/pages/00-modal.pug
+++ b/sourse/pug/pages/00-modal.pug
@@ -37,6 +37,7 @@ block pagecontent
 			+btn("modal-call", "Заказать детальный расчет")(data-title= "Заказать детальный расчет" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет." data-btn= "Заказать расчет" data-pic= "1")
 			+btn("modal-call", "Записаться на экскурсию")(data-title= "Записаться на&nbsp;экскурсию по&nbsp;производству" data-text= "Оставьте свой номер телефона, мы&nbsp;перезвоним в&nbsp;течение 15&nbsp;минут и&nbsp;запишем вас" data-btn= "Запсиаться на&nbsp;экскурсию" data-pic= "1")
 			+btn("modal-call-reviews", "Читать отзыв")
+			+btn("modal-policy", "персональных данных")
 	+footer
 
 
