--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -12,7 +12,7 @@ mixin modal()
 				+input("Ваше Имя")(required)
 				+input("+7 ___ ___ __ __", 'tel')(required)
 				+e.BUTTON.btn.btn(type="submit")
-				+e.agreement Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку #[a(href="#") персональных данных] 
+				+e.agreement Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку #[a(href="#modal-policy").link-modal-js персональных данных] 
 			+e.img-wrap.bg-wrap
 				+pic('modal-bg.jpg', 'bg', 0).picture-bg
 				
@@ -36,5 +36,22 @@ mixin modal()
 				+content('&laquo;Убрали за&nbsp;собой мусор, соблюдали чистоту&raquo;', 'Вы&nbsp;купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.', 'Вы&nbsp;купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.')
 				
 	// #modal-call-reviews
+	
+	div(id="modal-policy"  style="display: none" )
+		+b.modal-win--reviews.d-block.p-4
+			p Политика конфиденциальности объясняет пользователям ресурса <a href="https://naves-na-zakaz.ru/">https://naves-na-zakaz.ru</a>/ (сайт \ мобильное приложение), с какой целью их личная информация собирается, и как будет использоваться.
+
+			p Сайт <a href="https://naves-na-zakaz.ru/"> https://naves-na-zakaz.ru/</a> уважает ваше право и соблюдает конфиденциальность при заполнении, передачи и хранении ваших персональных данных.
+
+			p Размещение заявки на сайте <a href="https://naves-na-zakaz.ru/">https://naves-na-zakaz.ru</a> означает Ваше согласие на обработку данных и дальнейшей передачи ваших контактных данных компании «Навес на заказ».
+
+			p Под персональными данными подразумевается информация, относящаяся к субъекту персональных данных, в частности фамилия, имя и отчество, дата рождения, адрес, контактные реквизиты (телефон, адрес электронной почты), семейное, имущественное положение и иные данные, относимые Федеральным законом от 27 июля 2006 года № 152-ФЗ «О персональных данных» (далее – «Закон») к категории персональных данных.
+
+			p Целью обработки персональных данных является оказание сайтом <a href="https://naves-na-zakaz.ru/">https://naves-na-zakaz.ru</a> информационно-справочных услуг, а также информирование об оказываемых услугах компании «Навес на заказ».
+
+			p В случае отзыва согласия на обработку своих персональных данных мы обязуемся удалить Ваши персональные данные в срок не позднее 3 рабочих дней. Отзыв согласия можно отправить в электронном виде по адресу: <a href="mailto:info@naves-na-zakaz.ru">info@naves-na-zakaz.ru</a>
+
+				
+	// #modal-policy
 	
 	// end modals
