--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -684,3 +684,69 @@ h4 {
 	}
 }
 
+
+
+.grecaptcha-badge{
+	opacity: 0 !important;
+	visibility: hidden !important;
+	pointer-events: none !important;
+}
+
+.page-404{
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	.main-wrapper{
+		flex-grow: 1;
+		display: flex;
+		flex-direction: column;
+	}
+}
+.s404{
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	@include media-breakpoint-up(lg) {
+
+		min-height: 700px;
+	}
+	min-height: 440px;
+	&__title{
+		font-weight: 700;
+		@include rfs(295.121px) ;
+		line-height: 100%; 
+		color: #35455C;
+		// text-shadow: ;
+		svg{
+			@include a-cent1;
+			max-width: calc(140% );
+			// z-index: 1;
+			z-index: -1;
+		}
+		position: relative;
+	}
+	&__inner{
+		
+		&--back{
+			z-index: -2;
+			@include a-cent1;
+			margin-top: 4px;
+			margin-left: 4px;
+			color: $primary;
+		}
+		&--front{
+			z-index: 3;
+
+			position: relative;
+		}
+
+	}
+	&__text{
+		font-size: rem(18);
+		font-weight: bold;
+		margin-bottom: rem(40);
+	}
+}
