--- a/sourse/pug/blocks/sFilter/_sFilter.pug
+++ b/sourse/pug/blocks/sFilter/_sFilter.pug
@@ -126,4 +126,6 @@ mixin sFilter(data)
 										+in-c("checkbox", 'Ангары')
 										+in-c("checkbox", 'Гаражи из сэндвич-панелей')(checked)
 										+in-c("checkbox", 'Кованные навесы')
+					+e.btn-wrap
+						+e.btn-tooltip(type="button") Применить
 	// end sFilter
