--- a/sourse/pug/blocks/sFilter/_sFilter.pug
+++ b/sourse/pug/blocks/sFilter/_sFilter.pug
@@ -127,5 +127,6 @@ mixin sFilter(data)
 										+in-c("checkbox", 'Гаражи из сэндвич-панелей')(checked)
 										+in-c("checkbox", 'Кованные навесы')
 					+e.btn-wrap
-						+e.btn-tooltip(type="button") Применить
+						+e.btn-tooltip.btn-primary(type="button") Применить
+						+e.btn-tooltip.btn-secondary(type="button") Сбросить
 	// end sFilter
