--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -159,3 +159,7 @@
 	font-size:math.div(17,10)*1rem;
 	width: math.div(16,17)*1em;
 }
+.icon-yzen {
+	font-size:math.div(50,10)*1rem;
+	width: math.div(50,50)*1em;
+}
