--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -36,6 +36,12 @@ mixin sContact()
 										+icon('instagram-map')
 									+e.links--yt(href="#")
 										+icon('youtube')
+										
+									+e.links--vk(href="#")
+										+icon('vk')
+									+e.links--yzen(href="#")
+										+icon('yzen')
+
 								+e.btn.btn.btn-primary.btn-sm.link-modal-js(href="#modal-call" data-title= "Обратный звонок" data-text= "Оставьте свой номер телефона, и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут." data-btn= "Заказать обратный звонок" data-pic= "2") Обратный звонок
 						+e.wrap.d-lg-none.mb-5
 							h5 Email
@@ -102,6 +108,10 @@ mixin sContact()
 								+icon('instagram-map')
 							+e.links--yt(href="#")
 								+icon('youtube')
+							+e.links--vk(href="#")
+										+icon('vk')
+							+e.links--yzen(href="#")
+								+icon('yzen')
 						+e.btn.btn.btn-primary.btn-sm.link-modal-js(href="#modal-call" data-title= "Обратный звонок" data-text= "Оставьте свой номер телефона, и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут." data-btn= "Заказать обратный звонок" data-pic= "2")  Обратный звонок
 
 					+e.wrap.d-none.d-lg-block.mb-4
