--- a/sourse/pug/blocks/sContact/_sContact.scss
+++ b/sourse/pug/blocks/sContact/_sContact.scss
@@ -224,6 +224,7 @@
 	&__btn {
 		padding: rem(9) rem(24);
 		font-size: rem(12) !important;
+		margin-top: .5rem;
 		&:hover {
 			color: $dark !important;
 			box-shadow: 0 0 1.25rem rgb(0 0 0 / 15%);
