--- a/sourse/pug/pages/06-landing.pug
+++ b/sourse/pug/pages/06-landing.pug
@@ -22,7 +22,7 @@ block variables
 	- let  bg= null
 
 block title
-	- let  title= 'Главная'
+	- let  title= 'Лэндинг'
 	title= title
 block pagecontent
 	//- +mob-mnu()
