edit sTypical block in 06-landing page

--- a/sourse/pug/pages/06-landing.pug
+++ b/sourse/pug/pages/06-landing.pug
@@ -32,7 +32,7 @@ block pagecontent
 	+headerBlock()
 	+sCatalog()
 	.section-wrapper
-		+sPortfolio()
+		+sTypicalPrice()
 	+sDesign()
 	+sCalculator()
 	.section-wrapper
