--- a/sourse/pug/blocks/sTypical/_sTypical.scss
+++ b/sourse/pug/blocks/sTypical/_sTypical.scss
@@ -204,6 +204,53 @@
 		// 	@include a-cent;
 		// }
 	}
+	&__info-row {
+		--bs-gutter-x: rem(14);
+		margin-bottom: rem(18);
+		flex-grow: 1;
+	}
+	&__title {
+		font-weight: 700;
+		line-height: 1.05em;
+		font-size: rem(15);
+		@include media-breakpoint-up(lg) {
+			font-size: rem(16);
+		}
+		@include media-breakpoint-up(xl) {
+			font-size: rem(18);
+		}
+	}
+	&__desc {
+		line-height: 1.05em;
+		font-size: rem(15);
+		@include media-breakpoint-up(lg) {
+			font-size: rem(16);
+		}
+		@include media-breakpoint-up(xl) {
+			font-size: rem(18);
+		}
+	}
+	&__spec {
+		font-size: rem(12);
+		line-height: 1.15em;
+		margin-bottom: rem(18);
+	}
+	&__item-row {
+		--bs-gutter-x: #{rem(16)};
+		--bs-gutter-y: #{rem(24)};
+		@include media-breakpoint-up(lg) {
+			--bs-gutter-x: #{rem(32)};
+			--bs-gutter-y: #{rem(48)};
+		}
+	}
+	&--price {
+		--sPT: #{rem(30)};
+		--sPB: #{rem(45)};
+		@include media-breakpoint-up(md) {
+			--sPT: #{rem(72)};
+			--sPB: #{rem(141)};
+		}
+	}
 	@include media-breakpoint-up(xl) {
 	}
 	@include media-breakpoint-up(lg) {
