--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -48,6 +48,12 @@ block pagecontent
 		+sCatalogProd()
 	+sContact()
 	.section-wrapper.section-wrapper--footer
+		+footer2()
+			+sContact2()
+
+	br
+	br
+	.section-wrapper.section-wrapper--footer
 		+footer()
 	//- +sForm()
 	+scrollToTop()
