--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -163,6 +163,7 @@ $enable-important-utilities: true !default;
 // Prefix for :root CSS variables
 
 $variable-prefix: bs- !default;
+$prefix: bs- !default;
 
 // Gradient
 //
