--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -31,7 +31,7 @@
 		}
 	}
 	&__btn {
-		width: 100%;
+		// width: 100%;
 		margin-bottom: rem(28);
 		@include media-breakpoint-up(lg) {
 			margin-bottom: 0;
@@ -108,6 +108,17 @@
 			color: rgba(44, 52, 64, 0.5);
 			margin-bottom: 0;
 		}
+	}
+
+	.sContact__links:first-of-type{
+		padding: 0;
+		.icon{
+			vertical-align: middle;
+			margin: 0;
+		}
+	}
+	.sContact__links:not(:hover){
+		background-color: #fff;
 	}
 // 
 @include media-breakpoint-up(xl) {}
