--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -143,19 +143,19 @@ mixin sContact2()
 	// start sContact
 	+b.sContact.section.pt-0#sContact&attributes(attributes)
 		.container  
-			.row
+			.row.mb-2.gy-3
 				
 				e.wrap.col-auto
 					h5 Телефоны
 					+e.content
 						+e.phone-number
-							a(href="tel:+74952563067").strong
+							div: a(href="tel:+74952563067").strong
 								<svg class="me-2" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M15.1917 9.93835L15.1799 10.0321C12.2827 8.66273 11.9796 8.48032 11.6055 9.01256C11.3459 9.38112 10.5897 10.217 10.3617 10.4643C10.1312 10.708 9.90191 10.7267 9.5106 10.558C9.11535 10.3706 7.84658 9.97708 6.34461 8.70271C5.17465 7.70945 4.38941 6.49131 4.15753 6.1165C3.77149 5.48431 4.57913 5.39436 5.31431 4.07501C5.44606 3.81264 5.37887 3.6065 5.28137 3.42034C5.18256 3.23293 4.396 1.39634 4.06662 0.664208C3.75041 -0.0654297 3.42499 0.0270246 3.18125 0.0270246C2.42236 -0.0354443 1.86768 -0.0254495 1.37888 0.456811C-0.747593 2.67321 -0.211363 4.95957 1.60813 7.39086C5.18387 11.8287 7.08901 12.6458 10.5725 13.7802C11.5132 14.0638 12.3709 14.0238 13.0495 13.9314C13.8057 13.8177 15.3775 13.0306 15.7056 12.1497C16.0415 11.2689 16.0415 10.538 15.9427 10.3694C15.8452 10.2007 15.587 10.107 15.1917 9.93835Z" fill="#2C3440"/>
 									</svg>
 
 								| +7 495 256 30 67 
-							a(href="tel:+74952563067")
+							div: a(href="tel:+74952563067")
 								
 								<svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<g clip-path="url(#clip0_2028_46)">
