--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -111,8 +111,8 @@
 	}
 
 	.sContact__links{
-		width: 32px;
-		height: 32px;
+		width: 32px !important;
+		height: 32px !important;
 		display: flex;
 		justify-content: center;
 		align-items: center;
