--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -21,7 +21,7 @@ mixin headerBlock()
 					+form-wrap.blurred-block
 						h4 Расчет цены за&nbsp;5&nbsp;минут
 						+e.subtitle Заполните форму&nbsp;&mdash; мы&nbsp;сразу перезвоним
-						p Укажите габариты навеса 
+						p.d-none.d-lg-block Укажите габариты навеса 
 						.row
 							.col-6
 								+input(`Ширина`, `text`)
