--- a/sourse/pug/blocks/topLine/_topLine.scss
+++ b/sourse/pug/blocks/topLine/_topLine.scss
@@ -6,8 +6,21 @@
 	display: flex;
 	align-items: center;
 	background-color: $light;
+	@include media-breakpoint-down(lg) {
+		position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 4;
+    border-bottom: 1px solid rgba(255,255,255,.2);
+		background-color: transparent;
+	}
 	&__main-row {
 		align-items: center;
+		--bs-gutter-x: #{rem(14)};
+		@include media-breakpoint-up(sm) {
+			--bs-gutter-x: #{rem(32)};
+		}
 		@include media-breakpoint-up(lg) {
 			--bs-gutter-x: #{rem(55)};
 		}
@@ -29,6 +42,12 @@
 	&__col {
 		@include media-breakpoint-up(lg) {
 			margin-right: auto;
+		}
+	}
+	.toggle-menu-mobile {
+		@include media-breakpoint-down(lg) {
+			--color: #fff;
+			min-width: rem(84);
 		}
 	}
 	// &__logo {
@@ -236,6 +255,9 @@
 .logo {
 	&:not(:hover) {
 		color: $black;
+		@include media-breakpoint-down(lg) {
+			color: #fff;
+		}
 	}
 	.icon {
 		font-size: rem(33);
