--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -8,10 +8,12 @@
 	position: fixed;
 	width: 100%;
 	left: 0;
-	top: 0;
-	height: rem(48);
+	bottom: 0;
+	height: rem(60);
 	@include media-breakpoint-up(lg) {
 		height: rem(64);
+		top: 0;
+		bottom: unset;
 	}
 	&.fixed {
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
