--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -113,7 +113,7 @@
 		max-width: 100%;
 		height: calc(var(--vh, 1vh) * 100);
 		width: 420px;
-		top: rem(48);
+		top: 0;
 		// left: 0;
 		right: 0;
 		background-color: $body-bg;
