--- a/sourse/pug/pages/00-modal.pug
+++ b/sourse/pug/pages/00-modal.pug
@@ -38,6 +38,8 @@ block pagecontent
 			+btn("modal-call", "Записаться на экскурсию")(data-title= "Записаться на&nbsp;экскурсию по&nbsp;производству" data-text= "Оставьте свой номер телефона, мы&nbsp;перезвоним в&nbsp;течение 15&nbsp;минут и&nbsp;запишем вас" data-btn= "Запсиаться на&nbsp;экскурсию" data-pic= "1")
 			+btn("modal-call-reviews", "Читать отзыв")
 			+btn("modal-policy", "персональных данных")
+			+btn("modal-callback", "Обратный звонок")(data-pic= "/img/@2x/modal-3.png" data-avatar='/img/@2x/avatar-1.png')
+			+btn("modal-callback", "Обратный звонок 2")(data-pic= "/img/@2x/modal-4.png" data-avatar='/img/@2x/avatar-2.png')
 	+footer
 
 
