--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -18,7 +18,7 @@ include ../blocks/sCertificates/_sCertificates.pug
 include ../blocks/sSpecifications/_sSpecifications.pug 
 
 block variables
-	- let  mainPage= null 
+	- let  mainPage= 'main-page'
 	- let  bg= null
 
 block title
