--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -35,10 +35,10 @@
 				}
 			}
 			&--phone-call {
-				background-color: $light;
-				color: $success;
+				background-color: $primary;
+				color: $secondary;
 				&:hover {
-					background-color: lighten($light, 10%);
+					background-color: lighten($primary, 10%);
 				}
 			}
 			&--measuring {
