--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -35,10 +35,15 @@
 				}
 			}
 			&--phone-call {
-				background-color: $primary;
-				color: $secondary;
+				// background-color: $primary;
+				// color: $secondary;
+				// &:hover {
+				// 	background-color: lighten($primary, 10%);
+				// }
+				background-color: $light;
+				color: $success;
 				&:hover {
-					background-color: lighten($primary, 10%);
+					background-color: lighten($light, 10%);
 				}
 			}
 			&--measuring {
