--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -8,15 +8,44 @@
 	position: fixed;
 	width: 100%;
 	left: 0;
-	bottom: 0;
+	top: 0;
 	height: rem(60);
 	@include media-breakpoint-up(lg) {
 		height: rem(64);
-		top: 0;
-		bottom: unset;
+		// top: 0;
+		// bottom: unset;
 	}
 	&.fixed {
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
+		background-color: #fff;
+		@include media-breakpoint-down(lg) {
+			top: unset;
+			bottom: 0;
+			.top-nav__tel {
+				display: block;
+			}
+			.logo {
+				display: none;
+			}
+		}
+		.toggle-menu-mobile {
+			@include media-breakpoint-down(sm) {
+				width: auto;
+			}
+		}
+	}
+	&__tel {
+		@include media-breakpoint-down(lg) {
+			display: none;
+			text-align: center;
+		}
+		@include media-breakpoint-down(sm) {
+			text-align: right;
+		}
+	}
+	.logo {
+		display: block;
+		text-align: center;
 	}
 	& > .container {
 		& > .row {
