--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -108,9 +108,9 @@ body {
 	@include media-breakpoint-up(lg) {
 		margin-top: rem(64);
 	}
-	@include media-breakpoint-down(lg) {
-		padding-bottom: rem(60);
-	}
+	// @include media-breakpoint-down(lg) {
+	// 	padding-bottom: rem(60);
+	// }
 }
 // .main-wrapper__inner{
 // 	// overflow-x: hidden;
